k8s/argocd/keda-interceptor-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-keda-proxy
  namespace: argocd
spec:
  type: ExternalName
  externalName: keda-add-ons-http-interceptor-proxy.keda.svc.cluster.local
  ports:
    - port: 80
      targetPort: 8080
